@@ -5,6 +5,9 @@ Changes for Crate Admin Interface
 Unreleased
 ==========
 
+ - Added Lazy loading of the stylesheet and plugins depending
+   on the enterprise settings.
+
  - Added buttons to collapse and expand all schemas in the tables view.
 
  - The console now expands vertically to show the whole query if its size
